--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-13  Alp Toker  <alp@atoker.com>
+
+        Build fix for breakage to non-Mac builds introduced in r27746.
+
+        * kjs/ustring.cpp:
+
 2007-11-13  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Maciej.
