--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,18 @@
+2007-11-13  John Sullivan  <sullivan@apple.com>
+
+        Reviewed by Darin.
+
+        removed recently-added PreferredType concept; we found a better way to do what
+        ths was accomplishing
+
+        * bridge/WindowFeatures.h:
+        (WebCore::WindowFeatures::WindowFeatures):
+        removed definition of PreferredType
+                        
+        * page/ContextMenuController.cpp:
+        (WebCore::openNewWindow):
+        removed use of PreferredType
+
 2007-11-12  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
