--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,15 @@
+2007-11-13  Steve Falkenburg  <sfalken@apple.com>
+
+        Add IDOMElementPrivate::font() to get an element's font
+        as a WebFontDescription.
+        
+        Reviewed by Darin.
+
+        * DOMCoreClasses.cpp:
+        (DOMElement::font):
+        * DOMCoreClasses.h:
+        * Interfaces/DOMPrivate.idl:
+
 2007-11-12  Adam Roben  <aroben@apple.com>
 
         Windows build fix
