--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Beth Dakin.
 
+        - fix <rdar://problem/5551163> REGRESSION: Cursor does not change to arrow on "X" button in google maps, making it hard to click
+
+        * css/html4.css: Added a 'cursor: auto' rule for links.
+        * manual-tests/link-cursor-auto.html: Added.
+
+2007-11-13  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Beth Dakin.
+
         - fix <rdar://problem/5516272> Reproducible crash in RenderObject::setStyle involving going Back from a non-HTML document (Bookmarks view, PDF view)
 
         The root cause for the crash is that when a non-HTML view enters the
