Squashed commit of the following:
commit 3e6cb737b3b823b4bf177b9e0c2fcfcc38baf46d
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 16:22:36 2007 -0800

    Changelog for commit

commit 4be13a5ef17685368e68a76292b785c99da1d7f2
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 16:19:34 2007 -0800

    Make inspector work with new API

commit c500ed90c32b31fbc37a183c8ae5427f36b9ccc2
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 14:37:16 2007 -0800

    Woops!

commit c61b147f35a2801c340f82054d177914da6ccde5
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 11:45:40 2007 -0800

    Ander's review comments

commit f3dc2683acc5730cbab8758226adae3e35f7263b
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 18:05:21 2007 -0800

    Initial vcproj changes after the rebase

commit c8cf9be275479ff1fb39b911e5165f07fcd5ae34
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 18:02:30 2007 -0800

    Fixed Changelog a bit

commit c9790cde9b79e25690f1c0b34b9c1e77d2f4449f
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 16:53:48 2007 -0800

    Finish the rebase/trunk merge

commit 663ad85619ec677eb5c52bed3c59b8b3f50de624
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 6 11:54:26 2007 -0800

    VCProj changes for new SQL api + blind attempt at keeping qt/gtk going

commit 2aceeb3bdfa6894bb4e93c0b129867059e9cdad7
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 15:27:55 2007 -0800

    Changelog edit cleanup

commit a05f11fa4fa0ba935eb28df6d9628f29a4074d7a
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 15:25:27 2007 -0800

    Changelog entries and small style cleanup

commit a2d34a78d06f446f4bdb6ea1797dfb91cfc336fe
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 13:37:10 2007 -0800

    Minor edit

commit eaf0aa9c07cfeb54df312c130677ecbc60728c5f
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 13:32:20 2007 -0800

    Do version check at time of executeSql



--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,133 @@
+2007-11-13  Brady Eidson  <beidson@apple.com>
+
+        JS bindings by Anders, reviewed by Brady
+        WebCore changes by Brady, reviewed by Anders and Tim
+
+        Adapt to the new iteration of the HTML5 client-side storage spec.
+
+        Based largely on implementation feedback we generated in landing our first version of this API and also
+        on the input of others in the community, the database spec went through a large overhaul that addresses
+        many concerns.  Amongst other changes/improvements:
+        - SQLTransaction object is added and all transactions are explicit.  In addition, since the API manages
+          transactions explicitly, transaction-related language in SQL statements is disallowed
+        - executeSql() is now on a transaction object instead of the database object.
+        - Database.changeVersion() now takes place within the context of a transaction.  Therefore the version 
+          change can be atomic along with the statements that modify the DB schema
+
+        Most of the logic now takes place during the "transaction steps," which the specification clearly lays out
+        as a chain of events on the SQLTransaction object where processing is handed off between being processed 
+        asynchronously and calling back up to javascript.  To accomplish this voodoo, SQLTransaction has a series of 
+        methods that roughly match up with the "transaction steps" and it keeps a pointer to the next step.
+
+        * DerivedSources.make:
+        * WebCore.xcodeproj/project.pbxproj:
+
+        * bindings/js/JSDatabaseCustom.cpp:
+        (WebCore::JSDatabase::changeVersion): Adapt to the new API
+        (WebCore::JSDatabase::transaction): Added
+
+        * bindings/js/JSSQLTransactionCustom.cpp: Added.
+        (WebCore::JSSQLTransaction::executeSql): Added
+
+        * page/DOMWindow.cpp:
+        (WebCore::DOMWindow::openDatabase): Add the new arguments
+        * page/DOMWindow.h:
+        * page/DOMWindow.idl:
+
+        * page/inspector/DatabasePanel.js: Use the new API
+
+        * storage/ChangeVersionWrapper.cpp: Added.  Implementation of "SQLTransactionWrapper" that enforces
+          changing the version of the database
+        (WebCore::ChangeVersionWrapper::ChangeVersionWrapper):
+        (WebCore::ChangeVersionWrapper::performPreflight):
+        (WebCore::ChangeVersionWrapper::performPostflight):
+        * storage/ChangeVersionWrapper.h: Added.
+        (WebCore::ChangeVersionWrapper::sqlError):
+
+        * storage/Database.cpp: Removed the "main thread" and "background thread" sqlite handles as all sqlite operations can now
+          happen solely on the background thread - most of these changes result from that change
+        (WebCore::Database::Database): Removed an obsolete FIXME
+        (WebCore::Database::openAndVerifyVersion): 
+        (WebCore::Database::getVersionFromDatabase):
+        (WebCore::Database::setVersionInDatabase):
+        (WebCore::Database::versionMatchesExpected): Atomically guarantee that the current version and expected version are the same
+        (WebCore::Database::performOpenAndVerify):
+        (WebCore::Database::performTransactionStep): Added, as a hook for the DatabaseTransactionTask on the DatabaseThread
+        (WebCore::Database::changeVersion): Changed for the new API from JS
+        (WebCore::Database::transaction): Added, for the new API from JS
+        (WebCore::Database::scheduleTransaction): Add a transaction to this Database's transaction queue
+        (WebCore::Database::scheduleTransactionStep): Schedule the current transaction to be called on the background thread
+        (WebCore::Database::scheduleTransactionCallback): Schedule the current transaction to perform a callback on the main thread
+        (WebCore::Database::performGetTableNames):
+        (WebCore::Database::deliverAllPendingCallbacks):
+        (WebCore::Database::deliverPendingCallback):
+        (WebCore::Database::setExpectedVersion):
+        * storage/Database.h: 
+        * storage/Database.idl:
+
+        * storage/DatabaseTask.cpp:  Changed DatabaseTask to create a mutex on demand, and use the existence of that mutex
+          to replace the m_synchronous flag
+        (WebCore::DatabaseTask::performTask):
+        (WebCore::DatabaseTask::lockForSynchronousScheduling):
+        (WebCore::DatabaseTask::waitForSynchronousCompletion):
+        (WebCore::DatabaseTransactionTask::DatabaseTransactionTask):
+        * storage/DatabaseTask.h:
+
+        * storage/SQLError.h: New API object
+
+        * storage/SQLResultSet.cpp:
+        (WebCore::SQLResultSet::SQLResultSet): Small changes to the API object
+        * storage/SQLResultSet.h:
+        * storage/SQLResultSet.idl:
+
+        * storage/SQLStatement.cpp: Added.
+        (WebCore::SQLStatement::SQLStatement):
+        (WebCore::SQLStatement::execute): Actually execute the sql statement on the SQLiteDatabase if it's still valid
+        (WebCore::SQLStatement::setVersionMismatchedError): Flag this statement as bad before it even starts in case
+          of an actual version vs. expected version mismatch
+        (WebCore::SQLStatement::performCallback): Call the right callback (SQLStatement or SQLStatementError) for this statement
+        * storage/SQLStatement.h: Added.
+        (WebCore::SQLStatement::hasStatementCallback):
+        (WebCore::SQLStatement::hasStatementErrorCallback):
+        (WebCore::SQLStatement::sqlError): Get the error for this statement, if any
+
+        * storage/SQLTransaction.cpp: Added.
+        (WebCore::SQLTransaction::SQLTransaction):
+        (WebCore::SQLTransaction::executeSQL): Entry point for the API from JS
+        (WebCore::SQLTransaction::enqueueStatement): Add a new statement onto the queue
+        (WebCore::SQLTransaction::performNextStep): Call the method for the next step
+        (WebCore::SQLTransaction::performPendingCallback): Call the method for the pending callback
+        (WebCore::SQLTransaction::openTransactionAndPreflight): Open a transaction to the database and preflight 
+          using the SQLTransactionWrapper, if any
+        (WebCore::SQLTransaction::deliverTransactionCallback): Deliver the transaction callback to the javascript thread
+        (WebCore::SQLTransaction::scheduleToRunStatements): Convinience to schedule this transaction on the database thread 
+          and make runStatements() the next step
+        (WebCore::SQLTransaction::runStatements): Start running the sql statements queued up for this transaction 
+        (WebCore::SQLTransaction::getNextStatement): Bring the next statement off the queue
+        (WebCore::SQLTransaction::runCurrentStatement): Execute the current statement
+        (WebCore::SQLTransaction::deliverStatementCallback): Deliver the SQLStatementCallback for this statement
+        (WebCore::SQLTransaction::postflightAndCommit): Postflight the transaction using SQLTransactionWrapper and commit it
+        (WebCore::SQLTransaction::handleTransactionError): Make the right call for any error that occurred on the Transaction
+        (WebCore::SQLTransaction::deliverTransactionErrorCallback): Deliver the SQLTransactionErrorCallback
+        (WebCore::SQLTransaction::cleanupAfterTransactionErrorCallback): Either do a final commit or rollback to cleanup the
+          transaction after it error'ed out
+        * storage/SQLTransaction.h:
+        (WebCore::SQLTransactionWrapper::~SQLTransactionWrapper): 
+        (WebCore::SQLTransaction::database):
+        * storage/SQLTransaction.idl:
+
+        The following were made obsolete by the new version of the API:
+        * bindings/js/JSCustomSQLCallback.cpp: Removed.
+        * bindings/js/JSCustomSQLCallback.h: Removed.
+        * bindings/js/JSCustomVersionChangeCallback.cpp: Removed.
+        * bindings/js/JSCustomVersionChangeCallback.h: Removed.
+        * storage/DatabaseCallback.cpp: Removed.
+        * storage/DatabaseCallback.h: Removed.
+        * storage/SQLCallback.h: Removed.
+        * storage/SQLCallback.idl: Removed.
+        * storage/VersionChangeCallback.h: Removed.
+        * storage/VersionChangeCallback.idl: Removed.
+
 2007-11-13  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Beth Dakin.
