--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-13  Adam Roben  <aroben@apple.com>
+
+        Build fix
+
+        Reviewed by Geoff.
+
+        * kjs/regexp.h: Added a missing #include.
+
 2007-11-13  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
