--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-13  Mark Rowe  <mrowe@apple.com>
+
+        Remove removed file from the project.
+
+        * WebCore.pro:
+
 2007-11-13  Brady Eidson  <beidson@apple.com>
 
         Release build fix
